RESOLVED FIXED37499
Web Inspector: Cannot effectively delete properties in the Styles sidebar pane
https://bugs.webkit.org/show_bug.cgi?id=37499
Summary Web Inspector: Cannot effectively delete properties in the Styles sidebar pane
Alexander Pavlov (apavlov)
Reported 2010-04-13 06:50:30 PDT
Style properties disappear in the pane when deleted, but effectively they remain in the respective stylesheet and appear in the pane if the Web Inspector is re-opened.
Attachments
[PATCH] Trivial fix (1.43 KB, patch)
2010-04-13 07:12 PDT, Alexander Pavlov (apavlov)
no flags
Alexander Pavlov (apavlov)
Comment 1 2010-04-13 07:12:35 PDT
Created attachment 53244 [details] [PATCH] Trivial fix
Joseph Pecoraro
Comment 2 2010-04-13 07:18:11 PDT
Comment on attachment 53244 [details] [PATCH] Trivial fix Nice!
Joseph Pecoraro
Comment 3 2010-04-13 07:19:56 PDT
Hmm, I am not a Reviewer yet in commiters.py. So if this fails I will take care of things (either having someone else mark these flags, landing myself, or updating commiters.py).
WebKit Commit Bot
Comment 4 2010-04-13 07:20:59 PDT
Comment on attachment 53244 [details] [PATCH] Trivial fix Rejecting patch 53244 from review queue. joepeck@webkit.org does not have reviewer permissions according to http://trac.webkit.org/browser/trunk/WebKitTools/Scripts/webkitpy/common/config/committers.py. - If you do not have reviewer rights please read http://webkit.org/coding/contributing.html for instructions on how to use bugzilla flags. - If you have reviewer rights please correct the error in WebKitTools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). Due to bug 30084 the commit-queue will require a restart after your change. Please contact eseidel@chromium.org to request a commit-queue restart. After restart the commit-queue will correctly respect your reviewer rights.
Pavel Feldman
Comment 5 2010-04-13 07:22:56 PDT
It would be great to have a test for this one.
WebKit Commit Bot
Comment 6 2010-04-13 07:37:03 PDT
Comment on attachment 53244 [details] [PATCH] Trivial fix Clearing flags on attachment: 53244 Committed r57514: <http://trac.webkit.org/changeset/57514>
WebKit Commit Bot
Comment 7 2010-04-13 07:37:08 PDT
All reviewed patches have been landed. Closing bug.
Eric Seidel (no email)
Comment 8 2010-04-13 13:27:11 PDT
Eric Seidel (no email)
Comment 9 2010-04-13 13:30:31 PDT
Joe, you'll need to update committers.py, moving your entry from committers to reviewers if you're not a reviewer.
Note You need to log in before you can comment on or make changes to this bug.