2010-04-13  Alexander Pavlov  <apavlov@chromium.org>

Reviewed by Pavel Feldman.

        Web Inspector: Cannot effectively delete properties in the Styles sidebar pane
        https://bugs.webkit.org/show_bug.cgi?id=37499

        * inspector/InspectorDOMAgent.cpp:
        (WebCore::InspectorDOMAgent::applyStyleText):

Canonical link: https://commits.webkit.org/48802@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57514 268f45cc-cd09-0410-ab3c-d52691b4dbfc